Change display style from flex to block to prevent left-aligned text

--- a/styles/common.css
+++ b/styles/common.css
@@ -116,14 +116,14 @@ canvas#aphrodite-output {
 }
 
 #aphrodite-exception {
-    position: absolute;
     width: 100%;
     height: 100%;
     overflow: hidden;
     background-color: tomato;
     z-index: 999;
-    display: none;
-    align-items: center;
     text-align: center;
+    display: none;
     font-size: 16pt;
+    align-items: center;
+    align-content: center;
 }
